--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -30,4 +30,5 @@
      for different hardware and product builds. -->
 <resources>
     <color name="config_fodColor">#00000000</color>
+    <bool name="keyguard_security_container_force_bottom_margin">true</bool>
 </resources>
