rog3: Introduce in-screen fingerprint HAL
Change-Id: Ieba179aa369c10200c9c3f9ab277a2ab22cbb8e6

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -213,4 +213,7 @@
          config_defaultRefreshRate may be set to 0, in which case the value set for
          config_defaultPeakRefreshRate will act as the default frame rate. -->
     <integer name="config_defaultRefreshRate">144</integer>
+
+    <!-- Show a custom view for FOD -->
+    <bool name="config_usesFOD">true</bool>
 </resources>
