--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -29,5 +29,6 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
+    <bool name="keyguard_security_container_force_bottom_margin">true</bool>
     <color name="config_fodColor">#00000000</color>
 </resources>
