rog3: sensors: add udfps long press sensor
Change-Id: I8b65e3196a7d6f158f4ff589b9755cf7c7e51c92

--- a/rro_overlays/FrameworksResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlay/res/values/config.xml
@@ -247,4 +247,7 @@
          available on some devices. -->
     <bool name="config_enableHapticTextHandle">true</bool>
 
+    <!-- Type of the udfps long press sensor. Empty if long press is not supported. -->
+    <string name="config_dozeUdfpsLongPressSensorType" translatable="false">org.omnirom.sensor.udfps</string>
+
 </resources>
