--- a/rro_overlays/SystemUIOverlay/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlay/res/values/config.xml
@@ -30,4 +30,7 @@
     <!-- The radius of the enrollment progress bar, in dp -->
     <integer name="config_udfpsEnrollProgressBar" translatable="false">126</integer>
 
+    <!-- Doze: does the long press sensor need a proximity check? -->
+    <bool name="doze_long_press_proximity_check">true</bool>
+
 </resources>
