rog3: Check proximity on screen off UDFPS
Change-Id: I2b2b1fc21d9b52b7e96802c74514f6d8f0ced2fc

--- a/rro_overlays/FrameworksResOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlay/res/values/config.xml
@@ -250,4 +250,6 @@
     <!-- Type of the udfps long press sensor. Empty if long press is not supported. -->
     <string name="config_dozeUdfpsLongPressSensorType" translatable="false">org.omnirom.sensor.udfps</string>
 
+    <!-- Doze: does the long press sensor need a proximity check? -->
+    <bool name="doze_long_press_proximity_check">true</bool>
 </resources>
